fixed project paragraph spacing

--- a/files/styles.css
+++ b/files/styles.css
@@ -1,6 +1,14 @@
 :root {
 	--background: #ffffff;
 	--backgroundt: #ffffff7e;
+	--text-color: black;
+	--slide-hover: rgba(0, 0, 0, 0.8);
+
+	/* dark mode */
+	/* --background: black;
+	--backgroundt: #0000007e;
+	--text-color: white;
+	--slide-hover: rgba(255, 255, 255, 0.8); */
 }
 
 h1,
@@ -14,7 +22,7 @@ span {
 	font-family: 'Courier New', Courier, monospace;
 	/* font-family: 'Rubik', sans-serif; */
 	font-weight: 500;
-	color: black;
+	color: var(--text-color);
 	/* text-transform: uppercase; */
 }
 
@@ -55,7 +63,7 @@ button {
 	font-family: "Rubik", sans-serif;
 	font-size: 20px;
 	font-weight: 400;
-	color: white;
+	color: var(--background);
 
 }
 
@@ -95,7 +103,7 @@ body {
 	margin: 0;
 	font-family: 'Courier New', Courier, monospace;
 	font-weight: 700;
-	color: white;
+	color: var(--background);
 	/* font-family: 'Rubik', sans-serif; */
 	transition: all 0.5s ease;
 }
@@ -189,7 +197,7 @@ h1 {
 
 #name-intro {
 	font-weight: 400;
-	color: black;
+	color: var(--text-color);
 	margin-bottom: 50px;
 	font-size: 45px;
 }
@@ -212,7 +220,7 @@ h1 {
 
 	border-style: solid;
 	border-radius: 20px;
-	border-color: black;
+	border-color: var(--text-color);
 }
 
 .project-slideshow {
@@ -288,7 +296,7 @@ h1 {
 	width: auto;
 	margin-top: -22px;
 	padding: 16px;
-	color: black;
+	color: var(--text-color);
 	transition: 0.6s ease;
 	user-select: none;
 	pointer-events: all;
@@ -304,8 +312,8 @@ h1 {
 
 .prev:hover,
 .next:hover {
-	background-color: rgba(0, 0, 0, 0.8);
-	color: white;
+	background-color:var(--slide-hover);
+	color: var(--background);
 
 }
 
